Get ready for hex.pm (#59)
* hex: app.src for hex.pm

* hex: compile DTL templates with rebar3

* hex: finish Makefile

* hex: damn travis

* hex: damn travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ otp_release:
 
 sudo: false
 
-before_script:
+install:
   - set -e
   - wget https://s3.amazonaws.com/rebar3/rebar3
   - chmod +x ./rebar3
 
 script:
-  - ./rebar3 compile
+  - REBAR3=./rebar3 make
 
 after_script: REBAR3=./rebar3 make test
