--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,14 @@
 {deps, [{erlydtl, "0.11.1"}
        ]}.
+
+{plugins,
+ [{rebar3_erlydtl_plugin, ".*",
+   {git, "https://github.com/tsloughter/rebar3_erlydtl_plugin.git", {branch, "master"}}}
+ ]}.
+
+{erlydtl_opts, [{auto_escape, false}
+               ]}.
+
+{provider_hooks, [{pre, [{compile, {erlydtl, compile}}]}
+                 ,{post, [{compile, escriptize}]}
+                 ]}.
