--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{deps, [{erlydtl, "0.11.1"}
+{deps, [{erlydtl, "0.12.0"}
        ]}.
 
 {plugins,
@@ -8,6 +8,9 @@
 
 {erlydtl_opts, [{auto_escape, false}
                ]}.
+
+{escript_incl_apps, [erlydtl
+                    ]}.
 
 {provider_hooks, [{pre, [{compile, {erlydtl, compile}}]}
                  ,{post, [{compile, escriptize}]}
