--- a/rebar.config
+++ b/rebar.config
@@ -9,9 +9,16 @@
 {erlydtl_opts, [{auto_escape, false}
                ]}.
 
-{escript_incl_apps, [erlydtl
-                    ]}.
+{escript_incl_apps, [erldocs]}.
 
 {provider_hooks, [{pre, [{compile, {erlydtl, compile}}]}
                  ,{post, [{compile, escriptize}]}
                  ]}.
+
+{dialyzer, [{warnings, [error_handling
+                       ,race_conditions
+                       ,unmatched_returns
+                       ,underspecs
+                       %% ,no_return
+                       ]}
+           ]}.
