--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{deps, [{erlydtl, "0.12.0"}
+{deps, [{erlydtl, "~> 0.12.1"}
        ]}.
 
 {plugins,
@@ -9,9 +9,14 @@
 {erlydtl_opts, [{auto_escape, false}
                ]}.
 
-{escript_incl_apps, [erlydtl
-                    ]}.
-
 {provider_hooks, [{pre, [{compile, {erlydtl, compile}}]}
                  ,{post, [{compile, escriptize}]}
                  ]}.
+
+{dialyzer, [{warnings, [error_handling
+                       ,race_conditions
+                       ,unmatched_returns
+                       ,underspecs
+                       %% ,no_return
+                       ]}
+           ]}.
